--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<iframe src="https://habitica.com/" style="border: none;"></iframe>
+<!DOCTYPE html>
+<html>
+  <body>
+    <iframe src="https://codepen.io/greatghoul/full/ZjjKJP?__cf_chl_captcha_tk__=pmd_7PThtCVezWa1rMn5MkblHNNcwZQEjz9Yels8gKiTgjU-1630281776-0-gqNtZGzNAxCjcnBszQd9" style="border:none;" title="Habitica Batch Create Sub Tasks"></iframe>
+  </body>
+</html>
